--- a/views/index.ejs
+++ b/views/index.ejs
@@ -335,7 +335,7 @@
                                          width="250">
                                 </div>
                                 <div class="d-flex align-items-center justify-content-between align-items-center mt-2">
-                                    <p>
+                                    <p id="service-name">
                                         2000
                                     </p>
                                     <p id="product-price">
