--- a/views/index.ejs
+++ b/views/index.ejs
@@ -579,10 +579,26 @@
     </section>
 </div>
 
+<div class="modal fade" id="errorModal" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="errorModalLabel"><%= __('error_payment') %></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <!-- <div class="modal-body" id="errorModalBody" style="max-height: 60vh; overflow-y: auto;"></div> -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><%= __('close') %></button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script src="/assets/js/swiper-bundle.min.js"></script>
 <script src="/assets/js/intlTelInput.min.js"></script>
 <script src="/assets/js/getParams.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/libphonenumber-js/1.12.9/libphonenumber-js.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/index.js"></script>
 <script src="/assets/js/lang.min.js"></script>
 <script>
@@ -601,7 +617,6 @@ document.addEventListener('DOMContentLoaded', function() {
       sections[1].classList.add('open');
       document.getElementById('step1').classList.remove('active');
       document.getElementById('step2').classList.add('active');
-      document.getElementById('step2').scrollIntoView({behavior: 'smooth'});
     }
   });
 
