feat: fix payment form.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -337,10 +337,10 @@
                                 </div>
                                 <div class="d-flex align-items-center justify-content-between align-items-center mt-2">
                                     <p id="service-name">
-                                        2000
+                                        -
                                     </p>
-                                    <p id="product-price">
-                                        2.00€
+                                    <p>
+                                        0.00€
                                     </p>
                                 </div>
                             </div>
@@ -350,14 +350,16 @@
                                 <tbody>
                                 <tr>
                                     <th><%= __('delivery') %></th>
-                                    <th class="text-end">0.00€</th>
+                                    <th class="text-end">
+                                        <span id="product-price">0.00€</span>
+                                    </th>
                                 </tr>
                                 </tbody>
                                 <tbody>
                                 <tr>
                                     <th><%= __('total_order_amount') %></th>
                                     <th class="text-end" id="total-price">
-                                        <span> 2.00€ </span>
+                                        <span> 0.00€ </span>
                                     </th>
                                 </tr>
                                 </tbody>
